# CUDA-MatMul

./: CMakeLists.txt  README.md  main  matmul.cu  script.sh
include/: kernels.cuh  utils.cuh
kernels/: gemm_cublas.cu  gemm_v0.cu  gemm_v00_naive.cu  gemm_v1.cu
src/: main.cu
